--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,124 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+
+background: url("YOUR-LINK.COM") 
+list-style 
+text-decoration 
+text-transform
 */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.top-blue {
+  background-color: #4C7497;
+  height: 222px;
+}
+
+.large-container {
+  display: flex;
+  position: relative;
+  top: -169px;
+}
+
+.phones {
+  margin-right: 35px;
+}
+.phones-img {
+  width: 254px;
+  margin-left: 50px;
+  margin-right: 0px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+}
+
+.header {
+  display: flex;
+  /*border: 1px solid black;*/
+  padding-top: 10px;
+  height: 95px;
+  justify-content: space-between;
+}
+
+.insta-img {
+ margin-left: 2px;
+}
+
+.insta {
+  width: 253px;
+  margin-top: 5px;
+}
+.log-in {
+  margin-top: 20px;
+  margin-right: 5px;
+  color: white;
+  background-color: #4C7497;
+  height: 35px;
+  vertical-align: middle;
+  border: 1px solid #395F82;
+  position: relative;
+  top: 12px;
+  width: 80px;
+  font-size: 11px;
+}
+
+.home-icon {
+  width: 20px;
+  position: relative;
+  right: 4px;
+  top: 1px;
+}
+
+#container {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 400px;
+}
+
+.all-text {
+  margin: 28px;
+  padding-left: 5px;
+  padding-right: 8px;
+}
+
+h3 {
+  color: #06365f;
+  font-size: 19px;
+  margin-bottom: 0px;
+}
+
+.text {
+  font-size: 12px;
+}
+
+.stores {
+  display: flex;
+  position: relative;
+}
+
+.stores-imgs {
+  width: 135px;
+  margin-top: 15px;
+  margin-right: 15px; 
+}
+
+footer a {
+  text-decoration: none;
+  color: #1c5380;
+  margin-right: 10px;
+}
+
+.footer {
+  font-size: 10px;
+  position: relative;
+  top: -145px;
+  display: flex;
+  justify-content: center;
 }
